2012-09-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/intersect_gaussians.m: (v0.1.0)
	* Add matlab/PointsToolbox/intersect_gaussians.png:
	* Add matlab/test/test_intersect_gaussians.m:

	- Intersection of two Gaussians (analytic solution).

2012-09-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (v0.3.2)

	- Fix bug. If there are not at least 4 voxels in the input
	segmentation, then delaunay() will give an error. We should just
	return, so the output image is the same as the input.

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.3.1)

	- Fix bug. Variable was not being set in one of the cases in an if
	block.

2012-09-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/FindMatlab.cmake: (v0.2.6)

	- In Windows, figure out whether the architecture is 32 or 64 bit
	without having to resort to CMAKE_SIZEOF_VOID_P. This variable
	will only be set if project() has been run before, and at least in
	Gerardus, FindMatlab.cmake runs _after_ project(GERARDUS).

	- Add more version numbers for the Windows version. TODO: find a
	way to automate this. Having these versions hardcoded here is not
	very elegant.

	* CMakeLists.txt: (v0.2.2)

	- Hack to avoid CMake error messages when running FindMatlab.cmake
	in Windows because CMAKE_FIND_LIBRARY_PREFIXES,
	CMAKE_FIND_LIBRARY_SUFFIXES are not set.

	- When the compiler version has to be forced, use environment
	variables instead of the CMake compiler variables, that should be
	set by project().

2012-09-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (v0.3.1)

	- If the image has all voxels == 1, then the smoothed local convex
	hull is the image itself and we don't need to waste time doing
	other computations. Likewise, if the image has all voxels == 0,
	there's nothing to smooth

	* matlab/FiltersToolbox/blockproc3.m: (v0.4.0)
	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.3.0)
